[tool.poetry]
name = "repl_python3_weatherinfo"
version = "0.1.0"
description = ""
authors = ["whoareyouanas <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
django-authen = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
